--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Anudit Verma
+title: lol
 subtitle: Let me introduce you to my geek side!
 meta-title: "Hi, I'm Anudit"
 use-site-title: true
